--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,29 @@ spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 spring.mvc.static-path-pattern=/static/**
 
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
-#开发时关闭缓存,不然没法看到实时页面
-spring.thymeleaf.cache=false
+#freeMaker
+spring.freemarker.allow-request-override=false
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=true
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.enabled=true
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.prefer-file-system-access=true
+spring.freemarker.suffix=.html
+spring.freemarker.settings.template_update_delay=0
+spring.freemarker.settings.default_encoding=UTF-8
+spring.freemarker.settings.classic_compatible=true
+spring.freemarker.order=1
+spring.freemarker.template-loader-path=classpath:/templates/
 #thymeleaf这样配置就可以直接访问static下的HTML(和mvc访问方式二选一)
-spring.thymeleaf.prefix = classpath:/static/
-spring.thymeleaf.suffix = .html
-
+#spring.thymeleaf.prefix=classpath:/static/
+#spring.thymeleaf.suffix=.html
 #MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/labwork?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://172.245.71.13:3306/billbook?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 mybatis.typeAliasesPackage=com.tqh.demo.model
