--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 #视图层控制 用mvc方式访问templates下的HTML
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
-spring.mvc.static-path-pattern=/static/**
+spring.mvc.static-path-pattern=classpath:/static/**
 
 #freeMaker
 spring.freemarker.allow-request-override=false
