--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,4 @@ spring.datasource.url=jdbc:mysql://172.245.71.13:3306/billbook?useUnicode=true&c
 spring.datasource.username=root
 spring.datasource.password=123456
 mybatis.typeAliasesPackage=com.tqh.demo.model
+spring.jackson.date-format=yyyy-MM-dd
