--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         </dependency>
 
         <!-- Redis -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-redis</artifactId>
         </dependency>
@@ -98,6 +98,10 @@
             <artifactId>jedis</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>-->
     </dependencies>
 
     <build>
