--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,13 +1,11 @@
-# REDIS (RedisProperties)
+# REDIS
 # Redis数据库索引（默认为0）
-spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.database=0  
+# Redis服务器地址 （默认为127.0.0.1）
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口 （默认为6379）
+spring.redis.port=6379  
+# Redis服务器连接密码（默认为空）
 spring.redis.password=
-spring.redis.port=6379
-spring.redis.timeout=300
-spring.redis.maxIdle=8
-spring.redis.minIdle=0
-spring.redis.maxActive=8
-spring.redis.maxWait=-1
-#spring.redis.sentinel.master= # name of Redis server
-#spring.redis.sentinel.nodes= # comma-separated list of host:port pairs
+# 连接超时时间（毫秒）
+spring.redis.timeout=2000
