--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>-->
-        <dependency>
+       <!-- <dependency>
             <groupId>com.github.tobato</groupId>
             <artifactId>fastdfs-client</artifactId>
             <version>1.25.2-RELEASE</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
