--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,10 +33,4 @@ mybatis.typeAliasesPackage=com.tqh.demo.model
 spring.jackson.date-format=yyyy-MM-dd
 
 #pic upload
-fdfs.soTimeout=1500
-fdfs.connectTimeout=600
-#pic thumb
-fdfs.thumbImage.width=210
-fdfs.thumbImage.height=210
-#ip:port
-fdfs.trackerList[0]=192.168.0.79:22122
+img.location = D:\billBook\pic
