--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,5 @@ spring.datasource.password=123456
 mybatis.typeAliasesPackage=com.tqh.demo.model
 spring.jackson.date-format=yyyy-MM-dd
 
-#pic upload
-img.location = D:\billBook\pic
+#文件上传
+file.location = D:/billBook/uploadFile/
