--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
     </dependencies>
 
     <build>
+        <finalName>billBook</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -120,6 +121,11 @@
             </plugin>
         </plugins>
     </build>
-
+    <repositories>
+        <repository>
+            <id>spring-milestone</id>
+            <url>http://repo.spring.io/libs-release</url>
+        </repository>
+    </repositories>
 
 </project>
