--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,8 @@ spring.datasource.password=123456
 mybatis.typeAliasesPackage=com.tqh.demo.model
 spring.jackson.date-format=yyyy-MM-dd
 
-#文件上传
-file.location = D:/billBook/uploadFile/
+#本地文件上传
+#file.location = D:/billBook/uploadFile/
+
+#centos服务器文件上传
+file.location = /home/userData/billBook/uploadFile/
