--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ spring.jackson.date-format=yyyy-MM-dd
 
 #centos服务器文件上传
 file.location = /home/userData/billBook/uploadFile/
+
+#sigar 系统配置文件地址
+sigar.location= /static/sigarlib/
