--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,14 +28,14 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.245.71.13:3306/billbook?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
-mybatis.typeAliasesPackage=com.tqh.demo.model
+mybatis.typeAliasesPackage=com.xk.billbook.model
 spring.jackson.date-format=yyyy-MM-dd
 
 #本地文件上传
-#file.location = D:/billBook/uploadFile/
+file.location = D:/billBook/uploadFile/
 
 #centos服务器文件上传
-file.location = /home/userData/billBook/uploadFile/
+#file.location = /home/userData/billBook/uploadFile/
 
 #sigar 系统配置文件地址
-sigar.location= /static/sigarlib/
+sigar.location= classpath:/static/sigarlib/
