--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xk</groupId>
-    <artifactId>billbook</artifactId>
+    <artifactId>lifebook</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>billbook</name>
+    <name>lifebook</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -117,7 +117,7 @@
     </dependencies>
 
     <build>
-        <finalName>billBook</finalName>
+        <finalName>lifebook</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
