--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,17 +25,17 @@ spring.freemarker.template-loader-path=classpath:/templates/
 #spring.thymeleaf.suffix=.html
 #MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.245.71.13:3306/billbook?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://172.245.71.13:3306/lifebook?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
-mybatis.typeAliasesPackage=com.xk.billbook.model
+mybatis.typeAliasesPackage=com.xk.lifebook.model
 spring.jackson.date-format=yyyy-MM-dd
 
 #本地文件上传
-file.location = D:/billBook/uploadFile/
+#file.location = D:/billBook/uploadFile/
 
 #centos服务器文件上传
-#file.location = /home/userData/billBook/uploadFile/
+file.location = /home/userData/lifebook/uploadFile/
 
 #sigar 系统配置文件地址
 sigar.location= classpath:/static/sigarlib/
