--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,10 @@ spring.freemarker.template-loader-path=classpath:/templates/
 #spring.thymeleaf.prefix=classpath:/static/
 #spring.thymeleaf.suffix=.html
 #MySQL
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.245.71.13:3306/lifebook?useUnicode=true&characterEncoding=utf8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://172.245.71.13:3306/lifebook?useUnicode=true&characterEncoding=utf8&&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Xk532599835
 mybatis.typeAliasesPackage=com.xk.lifebook.model
 spring.jackson.date-format=yyyy-MM-dd
 
